updated struct code